--- a/themes/meghna-hugo/i18n/en.yaml
+++ b/themes/meghna-hugo/i18n/en.yaml
@@ -31,7 +31,7 @@
 - id: readMore
   translation: Read more
 - id: viewAllPost
-  translation: View All Post
+  translation: View All
 - id: share
   translation: Share
 - id: aboutAuthor
